--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,2 +1,7 @@
-@import 'bootstrap/dist/css/bootstrap.min.css';
+@import 'node_modules/bootstrap/scss/bootstrap.scss';
+@import 'node_modules/bootstrap-icons/font/bootstrap-icons.css';
+@import 'datatables.net-bs5/css/dataTables.bootstrap5.min.css';
 
+body {
+    font-family: 'Plus Jakarta Sans', sans-serif !important;
+}
